<resources>
    <string name="app_name">virashop</string>
    <string name="content_text">Tas tangan Gucci dengan pilihan Shoulder Bag merupakan jenis tas yang dapat Anda gunakan untuk keperluan pesta ataupun untuk digunakan ke berbagai jenis acara resmi. Dengan adanya sentuhan pita pada rantai tali tas ini membuat tampilannya menjadi sangat cantik. Selain itu, tas yang terbuat dari kulit ini dilengkapi dengan metallic strap yang memudahkan Anda untuk membuka dan menutup tas. Anda tidak perlu bingung dan khawatir akan barang-barang khusus Anda yang ingin dimasukkan ke dalam tas yang berukuran mini ini.</string>
    <string name="content_specs_deskripsi">-DUSBAG(SARUNG TAS) SABLON GUCCI, JADI HARGA MURAH TAPI TERLIHAT SEPERTI TAS MAHAL.-TALI RANTAI PIPIH ADA CANTOLAN-ADA 5 LUBANG BUAT LEBAR SEMPITIN
SO BISA DI PAKE MULTI FUNGSI . BISA SLEMPANG , PINGGANG , DAN PUNGGUNG
BAHAN ?? KANVAS GUCCI , KOMBINASI BAHAN TAIGA TEBAL</string>
    <string name="content_spacs_warna">HITAM, CREAM, DAN PUTIH</string>
    <string name="content_spacs_ukuran">PANJANG 120 CM,TALI BUAT SABUK PANJANGNYA 110 CM , LEBAR TALI 4 CM</string>
    <string name="content_price">Rp.500.000</string>
</resources>